packages/core/test/baseman/invalid-usage/case-param-position-1/commands/a.ts
import {
  Command,
  Executable,
  Param,
} from '../../../../..';

@Command()
export default class extends Executable {
  execute(
    foo: string,

    @Param()
    bar: string,
  ) { }
}
